kubernetes/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      name: http
      port: 4567
      targetPort: 4567
