kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: webapp.local
      http:
        paths:
          - path: /webapp(.*)
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 4567
